# asisjinwookim

./: .gitignore  README.md
2024_ansible_db_practice/: README.md
20250709_mlops/: README.md
2025_karpenter_disrupt1/eks/: a.sh  b.sh  c.sh  d.sh  e.sh  karpenter-values.yaml  main.tf  provisioner.yaml  svc.yaml
2025_karpenter_disrupt1/eks/.terraform/modules/: modules.json
2025_mlops/: MLOPS-VERSIONING-EXAMPLE.README.md
2025_mlops/2025_07_09_study/: package-lock.json  package.json
2025_mlops/2025_07_09_study/presentation/: package-lock.json
2025_mlops/feast-titanic-env/: environment.yml
2025_mlops/feast-titanic-env/feast_repo/: get_online_features.py  get_prediction_features.py  get_training_data.py
2025_mlops/feast-titanic-env/feast_repo/feature_repo/: example_repo.py  feature_store.yaml
2025_mlops/feast_mlops_env/: environment.yml
2025_mlops/feast_mlops_env/ml_pipeline_app/: apps.py
2025_mlops/feast_mlops_env/ml_pipeline_app/feast_repo/: feature_store.yml
2025_mlops/feast_mlops_env/mlops_platform/: asgi.py  settings.py  urls.py  wsgi.py
2025_mlops/house_prices_env/: Untitled.ipynb  environment.yml
2025_mlops/mlops-versioning-example/: .gitignore  conda_packages.txt  dvc.yaml  environment.yaml  params.yaml
2025_mlops/mlops-versioning-example/src/: evaluate.py  train.py
2025_mlops/music_recommender/: README.md  main.py  recommender_model.py
2025_mlops/mymlops/: environment.yml
2025_mlops/titanic_env/: environment.yml  submission.csv  titanic.ipynb
2025_spot_ratio/: main.py  pyproject.toml
(+29 files in other folders)
