[tool.poetry]
name = "spot-ratio"
version = "0.1.0"
description = ""
authors = ["muralteller <muralteller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
